--- a/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
+++ b/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
@@ -14,25 +14,45 @@
         </Grid.RowDefinitions>
 
         <Fluent:Ribbon Grid.Row="0">
-            <!--Backstage-->
-            <Fluent:Ribbon.Menu>
-                <Fluent:Backstage>
-                </Fluent:Backstage>
-            </Fluent:Ribbon.Menu>
-
             <!--Tabs-->
-            <Fluent:RibbonTabItem Header="Home">
-                <Fluent:RibbonGroupBox Header="Group">
-                    <Fluent:Button Header="Green"
-                                 />
-                    <Fluent:Button Header="Grey" 
-                                 />
+            <Fluent:RibbonTabItem Header="Основное">
+                <Fluent:RibbonGroupBox>
+                    
+                    <Fluent:Button Header="Выбрать" SizeDefinition="middle" Command="{Binding SelectFileCommand}"/>
+                    <Fluent:Button Header="Сохранить" SizeDefinition="middle"/>
+                    <Fluent:Button Header="Экспорт" SizeDefinition="middle"/>
+                    <Fluent:Button Header="Копировать" SizeDefinition="middle"/>
+                </Fluent:RibbonGroupBox>
+                <Fluent:RibbonGroupBox Header="Преобразование">
+                    <Fluent:Button Header="Старт"/>
+                    <Fluent:Button Header="Стоп"/>
+                    <Fluent:SeparatorTabItem/>
+                    <Fluent:RibbonToolBar Header="asd">
+                        <Fluent:ComboBox ItemsSource="{Binding Source={x:Static Fonts.SystemFontFamilies}}" IsReadOnly="True" MinWidth="100"/>
+                        <Button Content=" asd" Command="{Binding SelectFileCommand}"/>
+                    </Fluent:RibbonToolBar>
                 </Fluent:RibbonGroupBox>
             </Fluent:RibbonTabItem>
         </Fluent:Ribbon>
-
+        <!--Основная панель-->
         <Grid Grid.Row="1">
-            <TextBlock>My first window containing a Ribbon and something else.</TextBlock>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <DockPanel>
+                <StatusBar DockPanel.Dock="Bottom">
+                    <Slider Minimum="0.02" Maximum="1" MinWidth="100" Value="{Binding Scale}"/>
+                    <ComboBox/>
+                </StatusBar>
+                <ScrollViewer HorizontalScrollBarVisibility="Auto">
+                    <Image Stretch="None" Source="{Binding ImagePath}" Grid.Column="0">
+                        <Image.LayoutTransform>
+                            <ScaleTransform ScaleX="{Binding Scale}" ScaleY="{Binding Scale}"/>
+                        </Image.LayoutTransform>
+                    </Image>
+                </ScrollViewer>
+            </DockPanel>
         </Grid>
     </Grid>
 </Window>
