--- a/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
+++ b/src/AsciiArtCreator.Wpf.Framework/MainWindow.xaml
@@ -56,9 +56,10 @@
             </Grid.ColumnDefinitions>
             <DockPanel Grid.Column="0">
                 <StatusBar DockPanel.Dock="Bottom">
+                    <TextBlock Text="{}{@1+1"/>
                     <Slider x:Name="slider" Minimum="0.02" Maximum="10" MinWidth="100" Value="{Binding Scale}">
                         <behaviors:Interaction.Triggers>
-                            <behaviors:EventTrigger EventName="ValueChange">
+                            <behaviors:EventTrigger EventName="ValueChanged">
                                 <behaviors:InvokeCommandAction/>
                             </behaviors:EventTrigger>
                         </behaviors:Interaction.Triggers>
